# bevy-settings

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: basic.rs  multiple.rs
src/: lib.rs
