[package]
name = "bevy-settings"
version = "0.4.0"
edition = "2021"
license-file = "LICENSE.md"
description = "Use a simple struct as persistent settings between game launches. Usefull for e.g. storing the audio settings"
repository = "https://github.com/tecbeast42/bevy-settings"
readme = "README.md"
keywords = ["gamedev", "settings", "persistent"]
categories = ["game-development"]
exclude = [
    ".github/*",
]

[dependencies]
bevy_app = "0.12.0"
bevy_ecs = "0.12.0"
directories = "5"
serde = "1"
toml = "0.7"

[dev-dependencies]
bevy = "0.12.0"

