[package]
name = "bevy-settings"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "Use a simple struct as persistent settings between game launches. Usefull for e.g. storing the audio settings"
repository = "https://github.com/tecbeast42/bevy-settings"
readme = "README.md"
keywords = ["gamedev", "settings", "persistent"]
categories = ["game-development"]
exclude = [
    ".github/*",
]

[dependencies]
bevy_app = "0.13"
bevy_ecs = "0.13"
bevy_log = "0.13"
directories = "5"
serde = "1"
serial_test = "3.1.0"
toml = "0.8"

[dev-dependencies]
bevy = "0.13"
pretty_assertions = "1"
rand = "0.8"
